[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.4,<4"]

[project]
# name = "livecell-profiler"
name = "livecellx"
version = "0.0.2"
description = "live-cell analysis package including instance segmentation and tracker"
authors = [{ name = "Ke Ni", email = "ken67@pitt.edu" }]
readme = "readme.md"
classifiers = ["License :: OSI Approved :: GNU General Public License v3 (GPLv3)"]
requires-python = ">=3.8"
# dynamic = ["dependencies", "version", "description"]
# dynamic = ["dependencies"]

[tool.flit.module]
name = "livecellx"

dependencies = [
    "skimage",
    "ipympl",

    # labelme2coco requirements below
    "sahi>=0.8.19",
    "jsonschema>=2.6.0",

    "Augmentor",

    # note we need to use multitracker in cv2 legacy
    "opencv-contrib-python",

    # for sort tracker
    "lap",
    "filterpy",

]

[project.optional-dependencies]
docs = [
    "ipython",
    "ipywidgets>=8.0.0",
    "sphinx>=5.3",
    "sphinx-autodoc-annotation",
    "sphinx-autodoc-typehints>=1.10.3",
    "sphinx_rtd_theme",
    "sphinxcontrib-bibtex>=2.3.0",
    "sphinxcontrib-spelling>=7.6.2",
    "nbsphinx>=0.8.1",
    "myst-nb>=0.17.1",
    "sphinx_copybutton>=0.5.0",
    "sphinx-gallery",
    "GitPython",
]

[project.urls]
homepage = "https://github.com/xing-lab-pitt/livecellx"
documentation = "https://github.com/xing-lab-pitt/livecellx"
repository = "https://github.com/xing-lab-pitt/livecellx"

[project.scripts]
poetry = "infer_pyproject.cli:main"
