[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[project]
# name = "livecell-profiler"
name = "livecellx"
version = "0.0.2"
description = "live-cell analysis package including instance segmentation and tracker"
authors = [{ name = "Ke Ni", email = "ken67@pitt.edu" }]
readme = "readme.md"
classifiers = ["License :: OSI Approved :: GNU General Public License v3 (GPLv3)"]
requires-python = ">=3.8"
# dynamic = ["dependencies", "version", "description"]
# dynamic = ["dependencies"]

[project.urls]
homepage = "https://github.com/xing-lab-pitt/livecellx"
documentation = "https://github.com/xing-lab-pitt/livecellx"
repository = "https://github.com/xing-lab-pitt/livecellx"

[project.scripts]
poetry = "infer_pyproject.cli:main"

[tool.flit.metadata.dependencies]
python = "^3.8"
numpy = "*"
pandas = "*"
Pillow = "*"
scikit-image = "*"
ipympl = "*"
matplotlib = "*"
torchmetrics = "0.8.2"
sahi = ">=0.8.19"
jsonschema = ">=2.6.0"
pycocotools = "*"
pytorch-lightning = "1.5.6"
Augmentor = "*"
cellpose = "*"
opencv-contrib-python = "*"
filterpy = "*"
mahotas = "*"
seaborn = "*"
umap-learn = "*"
napari = {extras = ["all"], version = "*"}


[project.optional-dependencies]
docs = [
    "ipython",
    "ipywidgets>=8.0.0",
    "sphinx>=5.3",
    "sphinx-autodoc-annotation",
    "sphinx-autodoc-typehints>=1.10.3",
    "sphinx_rtd_theme",
    "sphinxcontrib-bibtex>=2.3.0",
    "sphinxcontrib-spelling>=7.6.2",
    "nbsphinx>=0.8.1",
    "myst-nb>=0.17.1",
    "sphinx_copybutton>=0.5.0",
    "sphinx-gallery",
    "GitPython",
]