[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.4,<4"]

[project]
# name = "livecell-profiler"
name = "livecellx"
version = "0.0.2"
description = "live-cell analysis package including instance segmentation and tracker"
authors = [{ name = "Ke Ni", email = "ken67@pitt.edu" }]
readme = "readme.md"
classifiers = ["License :: OSI Approved :: GNU General Public License v3 (GPLv3)"]
requires-python = ">=3.8"
# dynamic = ["dependencies", "version", "description"]
# dynamic = ["dependencies"]

[tool.flit.module]
name = "livecellx"

dependencies = [
    "numpy",
    "pandas",
    "Pillow",
    "scikit-image",
    "ipympl",
    "matplotlib",
    "torchmetrics==0.8.2",
    "sahi>=0.8.19",
    "jsonschema>=2.6.0",
    "pycocotools",
    "pytorch-lightning==1.5.6",
    "Augmentor",
    "cellpose",
    "opencv-contrib-python",
    "filterpy",
    "mahotas",
    "seaborn",
    "umap-learn",
    "napari[all]",
    "btrack==0.4.6"
]


[project.urls]
homepage = "https://github.com/xing-lab-pitt/livecellx"
documentation = "https://github.com/xing-lab-pitt/livecellx"
repository = "https://github.com/xing-lab-pitt/livecellx"

[project.scripts]
poetry = "infer_pyproject.cli:main"

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx_rtd_theme",
    "nbsphinx",
    "sphinx_autodoc_typehints",
    "sphinxcontrib-bibtex",
    "sphinx-gallery",
    "furo",
    "GitPython",
]